--- a/syllabus/syllabus-F2023.html
+++ b/syllabus/syllabus-F2023.html
@@ -3109,6 +3109,7 @@ vertical-align: -.125em;
 <section id="examples-of-final-projects" class="level3">
 <h3 class="anchored" data-anchor-id="examples-of-final-projects">Examples of final projects</h3>
 <ul>
+<li>Write a textbook “chapter” on a topic we did not cover in class (eg. weak lensing).</li>
 <li>Reproducing a result from the literature, possibly extending/exploring it further, and explaining it in detail.</li>
 <li>Writing a code to compute the ionization history/BBN, including effects that we might have ignored in class, and explaining these.</li>
 <li>Analyzing a public simulation dataset, calculating an observable of interest.</li>
@@ -3513,39 +3514,40 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <span id="cb1-74"><a href="#cb1-74" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb1-75"><a href="#cb1-75" aria-hidden="true" tabindex="-1"></a><span class="fu">### Examples of final projects</span></span>
 <span id="cb1-76"><a href="#cb1-76" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-77"><a href="#cb1-77" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Reproducing a result from the literature, possibly extending/exploring it further, and explaining it in detail.</span>
-<span id="cb1-78"><a href="#cb1-78" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Writing a code to compute the ionization history/BBN, including effects that we might have ignored in class, and explaining these.</span>
-<span id="cb1-79"><a href="#cb1-79" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Analyzing a public simulation dataset, calculating an observable of interest.</span>
-<span id="cb1-80"><a href="#cb1-80" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Writing a code to compute the CMB power spectrum, and exploring the effects of different parameters.</span>
-<span id="cb1-81"><a href="#cb1-81" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-82"><a href="#cb1-82" aria-hidden="true" tabindex="-1"></a><span class="fu">### Guidelines for final projects</span></span>
-<span id="cb1-83"><a href="#cb1-83" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-84"><a href="#cb1-84" aria-hidden="true" tabindex="-1"></a><span class="ss">1. </span>The final project is an individual project. You are welcome to discuss ideas with your classmates, group members, the TA or me. However, the final writeup or any code you submit must be your own work. If you have questions about what is acceptable, please ask.</span>
-<span id="cb1-85"><a href="#cb1-85" aria-hidden="true" tabindex="-1"></a><span class="ss">2. </span>Your final submission should be a ~5-10 page writeup, as well as the code/data to make fully reproduce the results. You are welcome to use any language you are comfortable with. You should create a Github repository for this project.</span>
-<span id="cb1-86"><a href="#cb1-86" aria-hidden="true" tabindex="-1"></a><span class="ss">3. </span>As part of grading your final project, I will schedule a 15 minute meeting with you to discuss your project. This will be an opportunity for you to explain your project, and for me to ask you questions about it.</span>
-<span id="cb1-87"><a href="#cb1-87" aria-hidden="true" tabindex="-1"></a><span class="ss">4. </span>The final project will be graded on the following : (1/4) motivation, and background, (1/4) results, (1/4) clarity of presentation, and (1/4) based on our discussion.</span>
-<span id="cb1-88"><a href="#cb1-88" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-89"><a href="#cb1-89" aria-hidden="true" tabindex="-1"></a><span class="fu">### Timeline for final projects</span></span>
-<span id="cb1-90"><a href="#cb1-90" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-91"><a href="#cb1-91" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Oct 23 : Proposals for the project due.</span>
-<span id="cb1-92"><a href="#cb1-92" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Dec 1 : Draft results, plots due. This will let me start scheduling meetings to discuss these projects</span>
-<span id="cb1-93"><a href="#cb1-93" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Dec 10 (TBC) : Final writeup due.</span>
-<span id="cb1-94"><a href="#cb1-94" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-95"><a href="#cb1-95" aria-hidden="true" tabindex="-1"></a><span class="fu">## Overall Grades</span></span>
-<span id="cb1-96"><a href="#cb1-96" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-97"><a href="#cb1-97" aria-hidden="true" tabindex="-1"></a>The final grade will be determined with equal weight given to the final project and HW. </span>
-<span id="cb1-98"><a href="#cb1-98" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-99"><a href="#cb1-99" aria-hidden="true" tabindex="-1"></a><span class="fu"># Academic Integrity</span></span>
-<span id="cb1-100"><a href="#cb1-100" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-101"><a href="#cb1-101" aria-hidden="true" tabindex="-1"></a>This is a class designed to get you thinking about research in cosmology, so I encourage you to use a broad range of resources (including other textbooks, Mathematica etc) when working on homework and the final project. You are also encouraged to discuss problems with classmates.</span>
-<span id="cb1-102"><a href="#cb1-102" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-103"><a href="#cb1-103" aria-hidden="true" tabindex="-1"></a>However, you must cite any resources you use, and you must write up your solutions in your own words. </span>
-<span id="cb1-104"><a href="#cb1-104" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-105"><a href="#cb1-105" aria-hidden="true" tabindex="-1"></a><span class="fu">## My Acknowledgements</span></span>
-<span id="cb1-106"><a href="#cb1-106" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-107"><a href="#cb1-107" aria-hidden="true" tabindex="-1"></a>This is a good place to acknowledge my debt to many sources for this class. A large portion of this class will follow the two textbooks and in many, many cases, my presentation and problem sets will directly borrow from them. Citing these sources as I proceed would be quickly tedious, but I will try to point to the relevant sections in the textbooks as we go along.</span>
-<span id="cb1-108"><a href="#cb1-108" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb1-109"><a href="#cb1-109" aria-hidden="true" tabindex="-1"></a>In cases where I borrow an argument from a different source, I will add this both to the bibliography and class notes.</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+<span id="cb1-77"><a href="#cb1-77" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Write a textbook &quot;chapter&quot; on a topic we did not cover in class (eg. weak lensing).</span>
+<span id="cb1-78"><a href="#cb1-78" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Reproducing a result from the literature, possibly extending/exploring it further, and explaining it in detail.</span>
+<span id="cb1-79"><a href="#cb1-79" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Writing a code to compute the ionization history/BBN, including effects that we might have ignored in class, and explaining these.</span>
+<span id="cb1-80"><a href="#cb1-80" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Analyzing a public simulation dataset, calculating an observable of interest.</span>
+<span id="cb1-81"><a href="#cb1-81" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Writing a code to compute the CMB power spectrum, and exploring the effects of different parameters.</span>
+<span id="cb1-82"><a href="#cb1-82" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-83"><a href="#cb1-83" aria-hidden="true" tabindex="-1"></a><span class="fu">### Guidelines for final projects</span></span>
+<span id="cb1-84"><a href="#cb1-84" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-85"><a href="#cb1-85" aria-hidden="true" tabindex="-1"></a><span class="ss">1. </span>The final project is an individual project. You are welcome to discuss ideas with your classmates, group members, the TA or me. However, the final writeup or any code you submit must be your own work. If you have questions about what is acceptable, please ask.</span>
+<span id="cb1-86"><a href="#cb1-86" aria-hidden="true" tabindex="-1"></a><span class="ss">2. </span>Your final submission should be a ~5-10 page writeup, as well as the code/data to make fully reproduce the results. You are welcome to use any language you are comfortable with. You should create a Github repository for this project.</span>
+<span id="cb1-87"><a href="#cb1-87" aria-hidden="true" tabindex="-1"></a><span class="ss">3. </span>As part of grading your final project, I will schedule a 15 minute meeting with you to discuss your project. This will be an opportunity for you to explain your project, and for me to ask you questions about it.</span>
+<span id="cb1-88"><a href="#cb1-88" aria-hidden="true" tabindex="-1"></a><span class="ss">4. </span>The final project will be graded on the following : (1/4) motivation, and background, (1/4) results, (1/4) clarity of presentation, and (1/4) based on our discussion.</span>
+<span id="cb1-89"><a href="#cb1-89" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-90"><a href="#cb1-90" aria-hidden="true" tabindex="-1"></a><span class="fu">### Timeline for final projects</span></span>
+<span id="cb1-91"><a href="#cb1-91" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-92"><a href="#cb1-92" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Oct 23 : Proposals for the project due.</span>
+<span id="cb1-93"><a href="#cb1-93" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Dec 1 : Draft results, plots due. This will let me start scheduling meetings to discuss these projects</span>
+<span id="cb1-94"><a href="#cb1-94" aria-hidden="true" tabindex="-1"></a><span class="ss">- </span>Dec 10 (TBC) : Final writeup due.</span>
+<span id="cb1-95"><a href="#cb1-95" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-96"><a href="#cb1-96" aria-hidden="true" tabindex="-1"></a><span class="fu">## Overall Grades</span></span>
+<span id="cb1-97"><a href="#cb1-97" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-98"><a href="#cb1-98" aria-hidden="true" tabindex="-1"></a>The final grade will be determined with equal weight given to the final project and HW. </span>
+<span id="cb1-99"><a href="#cb1-99" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-100"><a href="#cb1-100" aria-hidden="true" tabindex="-1"></a><span class="fu"># Academic Integrity</span></span>
+<span id="cb1-101"><a href="#cb1-101" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-102"><a href="#cb1-102" aria-hidden="true" tabindex="-1"></a>This is a class designed to get you thinking about research in cosmology, so I encourage you to use a broad range of resources (including other textbooks, Mathematica etc) when working on homework and the final project. You are also encouraged to discuss problems with classmates.</span>
+<span id="cb1-103"><a href="#cb1-103" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-104"><a href="#cb1-104" aria-hidden="true" tabindex="-1"></a>However, you must cite any resources you use, and you must write up your solutions in your own words. </span>
+<span id="cb1-105"><a href="#cb1-105" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-106"><a href="#cb1-106" aria-hidden="true" tabindex="-1"></a><span class="fu">## My Acknowledgements</span></span>
+<span id="cb1-107"><a href="#cb1-107" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-108"><a href="#cb1-108" aria-hidden="true" tabindex="-1"></a>This is a good place to acknowledge my debt to many sources for this class. A large portion of this class will follow the two textbooks and in many, many cases, my presentation and problem sets will directly borrow from them. Citing these sources as I proceed would be quickly tedious, but I will try to point to the relevant sections in the textbooks as we go along.</span>
+<span id="cb1-109"><a href="#cb1-109" aria-hidden="true" tabindex="-1"></a></span>
+<span id="cb1-110"><a href="#cb1-110" aria-hidden="true" tabindex="-1"></a>In cases where I borrow an argument from a different source, I will add this both to the bibliography and class notes.</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div></div></div></div></div>
 </div> <!-- /content -->
 
